# spend-monitoring

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
bot/: callbacks.py  cmdparser.py  handler.py  main.py
bot/commands/: __init__.py  add_item.py  list_items.py
elastic/: elasticsearch.yml  jvm.options
telegram-bot/: Dockerfile  pyproject.toml
telegram-bot/bot/: cmdparser.py  main.py
telegram-bot/bot/commands/: __init__.py  add_item.py  list_items.py
telegram-bot/bot/config/: elastic.py
telegram-bot/bot/domain/: item.py
telegram-bot/bot/utils/: cmd_types.py  elastic_q.py
